--- a/anemone_coffee/src/components/header/Navbar.css
+++ b/anemone_coffee/src/components/header/Navbar.css
@@ -1,6 +1,5 @@
 nav {
     justify-content: space-around;
-    position: fixed;
     width: 100%;
     min-height: 75px;
     background-size: cover; 
@@ -18,6 +17,10 @@ nav {
     width:100%;
     min-height:75px;
 }
+.navbar a{
+    color:white;
+    text-decoration: none;
+}
 
 .navbar_link {
     display:flex;
@@ -27,22 +30,13 @@ nav {
 .navbar_item {
     list-style-type:none;
     padding:1rem;
+    text-transform: uppercase;
 }
-
-.logo_fb {
-    width:45px;
-}
-
-.logo_insta {
-    width:33px;
-}
-
 .navbar_logo {
     width:150px;
     height:150px;
     margin-left:10px;
 }
-
 
 .content-container {
     display: flex;
@@ -60,4 +54,14 @@ nav {
 
 .navbar_container_text{
     color:white
+}
+
+.navbar_logoInsta {
+    width:30px;
+    height:30px;
+}
+
+.navbar_logoFacebook {
+    width:40px;
+    height:40px;
 }
