--- a/anemone_coffee/src/App.css
+++ b/anemone_coffee/src/App.css
@@ -18,3 +18,49 @@
     animation: logo-spin infinite 20s linear;
   }
 }
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #b37640e0; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; 
+  opacity: 1;
+  transition: opacity 0.5s ease; 
+}
+
+.preloader-logo {
+  width: 300px; 
+  height: auto;
+  animation: preloaderAnimation 1s infinite alternate; 
+}
+
+@keyframes preloaderAnimation {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-30vh);
+  }
+}
+
+/* Ajoutez ces styles pour définir le remplissage du fond */
+.fill-background {
+  background-image: url('../logos/LogoAnemone_noir.png');
+  background-size: 100% 0;
+  transition: background-size 2s ease;
+}
+/* ModalComponent.css */
+.custom-modal {
+  width: 70%; /* Ajustez la largeur selon vos besoins */
+  height: 70%; /* Ajustez la hauteur selon vos besoins */
+  margin: auto;
+  overflow: auto;
+}
+
+/* Ajoutez d'autres styles au besoin */
