--- a/anemone_coffee/src/App.css
+++ b/anemone_coffee/src/App.css
@@ -63,4 +63,26 @@
   overflow: auto;
 }
 
-/* Ajoutez d'autres styles au besoin */
+.points-container {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 999;
+}
+
+.point {
+  width: 15px;
+  height: 15px;
+  background-color: #ccc;
+  margin: 10px 0;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
+
+.point.active {
+  background-color: black;
+}
