--- a/anemone_coffee/src/components/footer/footer.css
+++ b/anemone_coffee/src/components/footer/footer.css
@@ -4,8 +4,9 @@
     justify-content: space-around;
     background-color: black;
     color:white;
+    padding:10px;
 }
 
 .footer_logo {
-    width:300px
+    width:200px
 }
