--- a/anemone_coffee/src/index.css
+++ b/anemone_coffee/src/index.css
@@ -31,7 +31,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #552900;
 }
 button:focus,
 button:focus-visible {
