--- a/anemone_coffee/src/App.css
+++ b/anemone_coffee/src/App.css
@@ -89,7 +89,7 @@
 
 
 /* Page réservation */
-.reservationForm {
+.reservationForm, .registerForm {
   max-width:400px;
   margin: 0 auto;
   margin-top: 20px;
@@ -101,7 +101,7 @@
 }
 
 /* Style for the form headings */
-.reservationForm_title {
+.reservationForm_title, .registerForm_title {
   text-align: center;
   color: #333;
 }
@@ -118,8 +118,16 @@ input[type="number"] {
   box-sizing: border-box;
 }
 
+.registerForm_input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
 /* Style for the reservation button */
-.reservationForm_button {
+.reservationForm_button, .registerForm_button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -136,7 +144,7 @@ input[type="number"] {
   border-color: #552900;
 }
 
-.reservationForm_label {
+.reservationForm_label, .registerForm_label {
   text-align:left;
   font-weight: bold;
   display: block;
