--- a/anemone_coffee/src/index.css
+++ b/anemone_coffee/src/index.css
@@ -14,9 +14,20 @@
   -webkit-text-size-adjust: 100%;
 }
 
+@font-face {
+  font-family: 'Intro RustG';
+  src: url('../public/fonts//IntroRustG-Base2Line.otf') format('truetype');
+}
+
+
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+li {
+  list-style-type:none;
 }
 
 button {
