--- a/anemone_coffee/src/index.css
+++ b/anemone_coffee/src/index.css
@@ -1,5 +1,4 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,25 +13,17 @@
   -webkit-text-size-adjust: 100%;
 }
 
-@font-face {
-  font-family: 'Intro RustG';
-  src: url('../public/fonts//IntroRustG-Base2Line.otf') format('truetype');
-}
-
-
-
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  line-height: 1.1
 }
-
 li {
   list-style-type:none;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -54,9 +45,7 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+  
   button {
     background-color: #f9f9f9;
   }
@@ -66,6 +55,7 @@ button:focus-visible {
   font-weight: bold;
   color: #ff0000; /* Exemple de couleur rouge */
 }
-body, p, h1, h2, h3, h4, h5, h6 {
+body, p, h2, h3, h4, h5, h6 {
   font-family: 'PT Sans', sans-serif;
 }
+
