--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -1,47 +1,44 @@
 nav {
-    position: relative; /* Assurez-vous que la position est relative pour que les éléments enfants puissent être positionnés par rapport à ce conteneur */
+    position: relative;
     width: 100%;
     min-height: 75px;
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center center; 
     height: 800px;
-    overflow: hidden; /* Empêche le contenu enfant de déborder */
-}
-
-.navbar_container_title {
-    font-family: 'intro-rust-g-base-2-line', sans-serif;
+    overflow: hidden;
 }
 
 .navbar {
-    display:flex;
+    display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-wrap:wrap;
-    width:100%;
-    min-height:75px;
+    flex-wrap: wrap;
+    width: 100%;
+    min-height: 75px;
 }
-.navbar a{
-    color:white;
+
+.navbar a {
+    color: white;
     text-decoration: none;
 }
 
 .navbar_link {
-    display:flex;
+    display: flex;
     align-items: center;
 }
 
 .navbar_item {
-    list-style-type:none;
-    padding:1rem;
+    list-style-type: none;
+    padding: 1rem;
     text-transform: uppercase;
     font-weight: 600;
-
 }
+
 .navbar_logo {
-    width:150px;
-    height:150px;
-    margin-left:10px;
+    width: 150px;
+    height: 150px;
+    margin-left: 10px;
 }
 
 .content-container {
@@ -51,65 +48,62 @@ nav {
 }
 
 .navbar_container {
-    padding-top:200px;
+    padding-top: 200px;
 }
 
 .navbar_container_title {
-    color:white;
+    color: white;
     font-family: 'Protest Revolution', sans-serif;
-
 }
 
-.navbar_container_text{
-    color:white;
+.navbar_container_text {
+    color: white;
 }
 
 .navbar_logoInsta {
-    width:30px;
-    height:30px;
+    width: 30px;
+    height: 30px;
 }
 
 .navbar_logoFacebook {
-    width:40px;
-    height:40px;
+    width: 40px;
+    height: 40px;
 }
 
 .dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
-  .dropdown-content a {
+}
+
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #e0e0e0;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-.buttonLangue {
-    padding:2px;
-    background-color: rgba(226, 226, 226, 0.575);
-    margin-left: 2px;;
 }
 
-/* Ajoutez ces styles à votre fichier CSS */
+.dropdown-content a:hover {
+    background-color: #e0e0e0;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.buttonLangue {
+    padding: 2px;
+    background-color: rgba(226, 226, 226, 0.575);
+    margin-left: 2px;
+}
 
 /* Responsive Adjustments */
 @media only screen and (max-width: 768px) {
