--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -1,5 +1,4 @@
 
-
 nav {
     position: relative;
     width: 100%;
@@ -101,4 +100,61 @@ nav {
     background-color: rgba(226, 226, 226, 0.575);
     margin-left: 2px;
 }
+} 
+.burger-icon {
+   display: none;
+}
+
+.navbar_link {
+   display: flex;
+   align-items: center;
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+
+.dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #f9f9f9;
+   min-width: 160px;
+   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+   z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+   display: block;
+}
+
+@media (max-width: 768px) {
+   .navbar_link {
+      display: none;
+   }
+
+   .burger-icon {
+      display: block;
+   }
+
+   .navbar_link.active {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background-color: rgb(252, 252, 252);
+      width: 100%;
+      padding: 20px 0;
+      z-index: 1;
+
+      a {
+         color: black;
+         text-decoration: none;
+         padding: 10px;
+         transition: background-color 0.3s ease;
+
+         &:hover {
+            background-color: #e0e0e0;
+         }
+      }
+   }
 }
