--- a/anemone_coffee/src/App.css
+++ b/anemone_coffee/src/App.css
@@ -62,7 +62,7 @@
 
 
 /* Page réservation */
-.reservationForm, .registerForm {
+.reservationForm, .registerForm, .loginForm {
   max-width:400px;
   margin: 0 auto;
   margin-top: 20px;
@@ -91,7 +91,7 @@ input[type="number"] {
   box-sizing: border-box;
 }
 
-.registerForm_input {
+.registerForm_input, .loginForm_input {
   width: 100%;
   padding: 8px;
   margin-top: 5px;
@@ -100,7 +100,7 @@ input[type="number"] {
 }
 
 /* Style for the reservation button */
-.reservationForm_button, .registerForm_button {
+.reservationForm_button, .registerForm_button, .loginForm_button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -117,8 +117,176 @@ input[type="number"] {
   border-color: #552900;
 }
 
-.reservationForm_label, .registerForm_label {
+.reservationForm_label, .registerForm_label, .loginForm_label {
   text-align:left;
   font-weight: bold;
   display: block;
+}
+
+/* Page admin profil */
+
+.admin-profile {
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.admin-profile-title {
+  text-align: center;
+  color: #333;
+}
+
+.admin-profile-label {
+  text-align: left;
+  font-weight: bold;
+  display: block;
+}
+
+.admin-profile-input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
+.admin-profile-button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #ffffff;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+.admin-profile-button:hover {
+  border-color: #552900;
+}
+
+/* Page liste de reservations */
+
+.reservation-list {
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.reservation-list-title {
+  text-align: center;
+  color: #333;
+}
+
+.reservation-list p {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.reservation-list ul {
+  list-style: none;
+  padding: 0;
+}
+
+.reservation-list li {
+  margin-bottom: 20px;
+}
+
+.reservation-list li p {
+  margin-bottom: 5px;
+}
+
+.reservation-list button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #ffffff;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+.reservation-list button:hover {
+  border-color: #552900;
+}
+
+.reservation-list {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.reservation-list-title {
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.error-message {
+  color: red;
+}
+
+.no-reservations {
+  font-style: italic;
+  color: #666;
+}
+
+.reservation-items {
+  list-style: none;
+  padding: 0;
+}
+
+.reservation-item {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.reservation-detail {
+  margin: 5px 0;
+}
+
+.detail-label {
+  font-weight: bold;
+}
+
+.reservation-actions {
+  display: flex;
+}
+
+.accept-button,
+.reject-button {
+  margin-right: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+.accept-button {
+  background-color: #32CD32;
+  color: #fff;
+}
+
+.reject-button {
+  background-color: #FF6347;
+  color: #fff;
 }
