--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -1,4 +1,3 @@
-
 nav {
     position: relative;
     width: 100%;
@@ -8,7 +7,64 @@ nav {
     background-position: center center; 
     height: 800px;
     overflow: hidden;
+}
 
+.navbar {
+    
+    .navbar_logo {
+        width: 150px;
+        margin:auto;
+    }
+    .navbar_link {
+        display: none;
+     }
+    
+     .navbar_link.active {
+        display: block;
+        flex-direction: column;
+        background-color: rgb(252, 252, 252);
+        width: 100%;
+        padding: 20px 0;
+        z-index: 1;
+    
+      
+        a {
+           color: black;
+           text-decoration: none;
+           padding: 10px;
+           transition: background-color 0.3s ease;
+    
+           &:hover {
+              background-color: #e0e0e0;
+           }
+        }
+     }
+
+    
+     
+}  
+.burger-icon {
+    display: block;
+    margin:auto
+    }
+    .navbar_container {
+        padding-top: 200px;
+
+        h1 {
+            color: white;
+            font-family: 'Protest Revolution', sans-serif;
+        }
+
+        p {
+            color: white;
+        }
+    }
+
+
+@media (min-width: 768px) {
+
+    nav {
+   
     .navbar {
         display: flex;
         justify-content: space-around;
@@ -25,6 +81,10 @@ nav {
         .navbar_link {
             display: flex;
             align-items: center;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            
 
             .navbar_item {
                 list-style-type: none;
@@ -81,80 +141,33 @@ nav {
 
         
     }
-    .navbar_container {
-        padding-top: 200px;
-
-        h1 {
-            color: white;
-            font-family: 'Protest Revolution', sans-serif;
-        }
-
-        p {
-            color: white;
-        }
-    }
+    
 
     
-.buttonLangue {
-    padding: 2px;
-    background-color: rgba(226, 226, 226, 0.575);
-    margin-left: 2px;
-}
-} 
-.burger-icon {
-   display: none;
-}
+    .buttonLangue {
+        padding: 2px;
+        background-color: rgba(226, 226, 226, 0.575);
+        margin-left: 2px;
+    }
+    } 
 
-.navbar_link {
-   display: flex;
-   align-items: center;
-   list-style: none;
-   padding: 0;
-   margin: 0;
-}
+    .burger-icon {
+    display: none;
+    }
 
-.dropdown-content {
-   display: none;
-   position: absolute;
-   background-color: #f9f9f9;
-   min-width: 160px;
-   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-   z-index: 1;
-}
 
-.dropdown:hover .dropdown-content {
-   display: block;
-}
 
-@media (max-width: 768px) {
-   .navbar_link {
-      display: none;
-   }
+    .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    }
 
-   .burger-icon {
-      display: block;
-   }
+    .dropdown:hover .dropdown-content {
+    display: block;
+    }
 
-   .navbar_link.active {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      background-color: rgb(252, 252, 252);
-      width: 100%;
-      padding: 20px 0;
-      z-index: 1;
-
-      a {
-         color: black;
-         text-decoration: none;
-         padding: 10px;
-         transition: background-color 0.3s ease;
-
-         &:hover {
-            background-color: #e0e0e0;
-         }
-      }
-   }
 }
