--- a/anemone_coffee/src/App.css
+++ b/anemone_coffee/src/App.css
@@ -64,6 +64,8 @@
 /* Style for input and select elements */
 input[type="text"],
 input[type="date"],
+input[type="email"],
+input[type="password"],
 select,
 input[type="number"] {
   width: 100%;
