--- a/anemone_coffee/src/components/admin/ReservationsList.scss
+++ b/anemone_coffee/src/components/admin/ReservationsList.scss
@@ -1,63 +1,75 @@
+// Variables
+$primary-color: #005a1e;
+$secondary-color: #6c757d;
+$error-color: red;
+$border-color: #ccc;
+$border-radius: 5px;
+
+// Mixin pour les boutons
+@mixin button-styles {
+  padding: 5px 10px;
+  margin-left: 5px;
+  border: none;
+  border-radius: $border-radius;
+  cursor: pointer;
+}
+
 .reservation-list {
   padding: 20px;
-  
+  border: 1px solid $border-color;
+  border-radius: $border-radius;
+  margin-bottom: 20px;
+
   .reservation-list-title {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 20px;
+    margin-bottom: 10px;
   }
-  
+
   .error-message {
-    color: red;
-    margin-bottom: 20px;
+    color: $error-color;
   }
-  
+
   .no-reservations {
-    font-style: italic;
-    margin-top: 20px;
+    color: $secondary-color;
   }
-  
-  table {
-    border-collapse: collapse;
-    
-    th, td {
+
+  .reservation-items {
+    list-style-type: none;
+    padding: 0;
+
+    .reservation-item {
+      border: 1px solid $border-color;
+      border-radius: $border-radius;
       padding: 10px;
-      border-bottom: 1px solid #ddd;
-    }
-    
-    th {
-      background-color: #f2f2f2;
-      font-weight: bold;
-      text-align: left;
-    }
-  }
-  
-  button {
-    margin-right: 5px;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: #007bff;
-    color: #fff;
-    transition: background-color 0.3s;
-    
-    &:hover {
-      background-color: #0056b3;
-    }
-  }
-  
-  // Media query pour les appareils de plus grande taille
-  @media (min-width: 768px) {
-    .reservation-list {
-      padding: 40px;
-      
-      .reservation-list-title {
-        font-size: 28px;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .reservation-details {
+        flex-grow: 1;
+        padding-right: 10px;
+
+        p {
+          margin: 5px 0;
+        }
       }
-      
-      table {
-        th, td {
-          padding: 15px;
+
+      .reservation-actions {
+        flex-shrink: 0;
+
+        button {
+          @include button-styles;
+        }
+
+        .acceptButton {
+          background-color: $primary-color;
+          color: white;
+        }
+
+        .rejectButton {
+          background-color: $error-color;
+          color: white;
         }
       }
     }
