--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -45,8 +45,11 @@ nav {
 }  
 .burger-icon {
     display: block;
-    margin:auto
-    }
+    margin:auto;
+
+
+}
+
     .navbar_container {
         padding-top: 200px;
 
