--- a/anemone_coffee/src/App.css
+++ b/anemone_coffee/src/App.css
@@ -12,8 +12,8 @@
 
 /* ModalComponent.css */
 .custom-modal {
-  width: 70%; /* Ajustez la largeur selon vos besoins */
-  height: 70%; /* Ajustez la hauteur selon vos besoins */
+  width: 70%; 
+  height: 70%; 
   margin: auto;
   overflow: auto;
 }
@@ -40,71 +40,6 @@
 
 .point.active {
   background-color: black;
-}
-
-
-/* Page réservation */
-.reservationForm, .registerForm, .loginForm {
-  max-width:400px;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom:20px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Style for the form headings */
-.reservationForm_title, .registerForm_title {
-  text-align: center;
-  color: #333;
-}
-
-/* Style for input and select elements */
-input[type="text"],
-input[type="date"],
-input[type="email"],
-input[type="password"],
-select,
-input[type="number"] {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  margin-bottom: 15px;
-  box-sizing: border-box;
-}
-
-.registerForm_input, .loginForm_input {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  margin-bottom: 15px;
-  box-sizing: border-box;
-}
-
-/* Style for the reservation button */
-.reservationForm_button, .registerForm_button, .loginForm_button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #ffffff;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-/* Hover effect for the button */
-.reservationForm_button:hover {
-  border-color: #552900;
-}
-
-.reservationForm_label, .registerForm_label, .loginForm_label {
-  text-align:left;
-  font-weight: bold;
-  display: block;
 }
 
 /* Page admin profil */
