--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -15,6 +15,11 @@ nav {
         width: 150px;
         margin:auto;
     }
+    .navbar_logoUser {
+        width:40px;
+        border-radius:100px;
+    }
+    
     .navbar_link {
         display: none;
      }
@@ -84,6 +89,7 @@ nav {
         .navbar_link {
             display: flex;
             align-items: center;
+            justify-content: center;
             list-style: none;
             padding: 0;
             margin: 0;
