--- a/anemone_coffee/src/components/mixins.scss
+++ b/anemone_coffee/src/components/mixins.scss
@@ -9,3 +9,50 @@
     margin-right: 10px;
   }
  
+  // Définition du mixin pour les styles des champs de formulaire
+@mixin form-styles {
+  max-width:400px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom:20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+@mixin input-style {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
+// Définition du mixin pour les styles des boutons de formulaire
+@mixin button-styles {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #ffffff;
+  cursor: pointer;
+  transition: border-color 0.25s;
+
+  &:hover {
+    border-color: #552900;
+  }
+}
+
+@mixin title-form {
+  text-align: center;
+  color: #333;
+}
+
+@mixin label-form {
+  text-align:left;
+  font-weight: bold;
+  display: block;
+}
