--- a/anemone_coffee/src/components/Sections.scss
+++ b/anemone_coffee/src/components/Sections.scss
@@ -13,7 +13,12 @@
     font-size: 14px;
 
     .logo_reseaux {
-      @include logo-styles; 
+      display:flex;
+      justify-content:center;
+      align-items: center;
+      width: 100%; 
+      height: auto;
+      margin-right: 10px;
     }
 
     .navbar_logoFacebook, .navbar_logoInsta, .navbar_logoTiktok {
@@ -34,12 +39,8 @@
       }
     }
 
-    @media screen and (min-width: 1025px) {
-      padding: 14px;
-      font-size: 18px;
-    }
+    
   }
-
   .section-image {
     flex: 1;
     margin-top: 20px;
@@ -49,15 +50,26 @@
       width:100% 
     }
   }
+  @media screen and (min-width: 1025px) {
+  
+    .section-image {
+      margin-top: 20px;
+      width:100%;
+  
+      .section-image-photo {
+        width:50%;
+      }
+    }
+  }
+  .text-left {
+    @extend .section;
+    flex-direction: row;
+  }
+  
+  .image-left {
+    @extend .section;
+    flex-direction: row-reverse;
+  }
 }
 
-.text-left {
-  @extend .section;
-  flex-direction: row;
-}
-
-.image-left {
-  @extend .section;
-  flex-direction: row-reverse;
-}
 
