--- a/anemone_coffee/src/components/PopUpMenu.css
+++ b/anemone_coffee/src/components/PopUpMenu.css
@@ -1,4 +1,7 @@
 
+.popUp_header {
+    text-align: center;
+}
 
 .popUp_container {
     width:100%;
@@ -6,8 +9,6 @@
     margin:auto;
 }
 .popUp_breakfast {
-    display:flex;
-    justify-content: space-around;
     margin-top:100px;
     margin-bottom:100px;
 }
@@ -17,7 +18,7 @@
 }
 
 button {
-    margin:2px;
+    margin:10px;
 }
 
 @media screen and (min-width: 768px) {
