--- a/anemone_coffee/src/components/TransitionImage/TransitionImg.scss
+++ b/anemone_coffee/src/components/TransitionImage/TransitionImg.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   .transition_title {
-    font-family: 'Protest Revolution', sans-serif;
+    font-family: 'IntroRustG', sans-serif;
     font-size: 24px;
     position: absolute;
     top: 50%; 
