--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -75,17 +75,18 @@ nav {
     }
 
 
-@media (min-width: 768px) {
+@media (min-width: 818px) {
 
     nav {
    
     .navbar {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
         width: 100%;
         min-height: 75px;
+        margin-top:20px;
 
         a {
             color: white;
@@ -98,7 +99,7 @@ nav {
             justify-content: center;
             list-style: none;
             padding: 0;
-            margin: 0;
+            margin-right: 50px;
             
 
             .navbar_item {
@@ -151,7 +152,7 @@ nav {
         .navbar_logo {
             width: 150px;
             height: 150px;
-            margin-left: 10px;
+            margin-left: 50px;
         }
 
         
