--- a/anemone_coffee/src/index.css
+++ b/anemone_coffee/src/index.css
@@ -30,6 +30,7 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
+  text-align: center;
   transition: border-color 0.25s;
 }
 button:hover {
