--- a/anemone_coffee/src/components/TransitionImage/TransitionImg.scss
+++ b/anemone_coffee/src/components/TransitionImage/TransitionImg.scss
@@ -5,13 +5,15 @@
     font-family: 'IntroRustG', sans-serif;
     font-size: 24px;
     position: absolute;
-    top: 50%; 
+    top: 25%; 
     left: 50%; 
     transform: translate(-50%, -50%);  
     color: white; 
 
     @media screen and (min-width: 768px) {
-      font-size: 28px;
+      font-size: 32px;
+      top: 50%; 
+      left: 50%; 
     }
   }
 }
