ajout statuts reservations, mail attente

--- a/anemone_coffee/src/components/admin/ReservationsList.scss
+++ b/anemone_coffee/src/components/admin/ReservationsList.scss
@@ -45,6 +45,15 @@ $border-radius: 5px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      text-align: justify;
+
+      &.pending {
+        background-color: rgb(255, 221, 158);
+      }
+    
+      &.accepted {
+        background-color: rgb(189, 255, 189);
+      }
 
       .reservation-details {
         flex-grow: 1;
