--- a/anemone_coffee/src/components/TransitionImage/TransitionImg.scss
+++ b/anemone_coffee/src/components/TransitionImage/TransitionImg.scss
@@ -2,8 +2,8 @@
   position: relative;
 
   .transition_title {
-    font-family: 'IntroRustG', sans-serif;
-    font-size: 24px;
+    font-family: 'League Spartan', sans-serif;
+    text-transform: uppercase;    
     position: absolute;
     top: 25%; 
     left: 50%; 
