--- a/anemone_coffee/src/components/ImageCarre.scss
+++ b/anemone_coffee/src/components/ImageCarre.scss
@@ -1,71 +1,110 @@
-
 .image-section {
   display: flex;
-  align-items: flex-start; 
-  width: 100%;
-  padding-top:50px;
-  padding-bottom:50px;
+  flex-direction: column; /* Mobile-first: colonne pour empiler les éléments */
+  align-items: center;
+  padding-right:20px;
+  padding-left:20px;
+  padding-bottom:30px;
+  
 
   .image-row {
-    flex-direction: column; 
-    margin:auto;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 
     img {
-      width: 90%; 
-      height: auto; 
+      width: 48%; /* Pour mobile : 2 images côte à côte */
+      height: auto;
+      margin: 2px;
       overflow: hidden;
-      margin:2px;
-      margin-right:10px;
     }
-   .image-row3, .image-row4 {
+
+    /* Cache les images supplémentaires sur mobile */
+    .image-row3, .image-row4 {
       display: none;
     }
   }
-  .text-section-right, .text-section-left {
-    text-align: justify;
-  }
 
-  @media screen and (min-width: 768px) {
+  .text-section-left, .text-section-right {
+    text-align: left;
+    width: 100%;
+    padding-top: 20px;
 
-    .section{
-      padding-left:150px;
-      padding-right: 150px;
-      
-
-    .image-row {
-      flex-direction: column; 
-      margin:auto;
-      margin-left:10px;
-  
-      img {
-        width: 100%; 
-        height: auto; 
-        overflow: hidden;
-        margin:5px;
-        margin-right:20px;
-        display: block; 
+    @media screen and (max-width: 768px) {
+      .title_left, .title_right {
+        display: none;
       }
-
-      .image-row3, .image-row4 {
-      display:block;
     }
   }
+
+  /* Mobile styles */
+  @media screen and (max-width: 768px) {
+    .section {
+      flex-direction: column; 
+      
+    }
+    
+    button{
+        color:rgb(0, 0, 0);
+      }
+      
+    .image-row {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      
+      img {
+        width: 48%; /* Ajustement pour que deux images soient côte à côte */
+      }
+    }
+
+    .text-section-left,
+    .text-section-right {
+      order: 1; /* Texte après les images */
+    }
+  }
+
+  /* Desktop et tablette */
+  @media screen and (min-width: 768px) {
+    
+      display: flex;
+      justify-content: center;
+      flex-direction: row;
+      align-items: center;    
+
+    /* Grille des images 2x2 */
+    .section-row {
+      display: flex;
+      flex-wrap: wrap; /* Les images se répartissent en deux lignes */
+      justify-content: space-between;
+      width: 50%; 
+
+    }
+
+    .image-row {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      margin-bottom: 2px; 
+      
+      .image-row3, .image-row4 {
+        display: block; 
+      }/* Espacement entre les deux lignes d'images */
+    }
+
+    /* Les images sont carrées et occupent 48% pour avoir 2 images par ligne */
+    .image-row img {
+      width: 48%; /* Chaque image prend 48% de la largeur de la ligne */
+      object-fit: cover; /* Remplit le cadre de manière proportionnée */
+      margin: 5px; /* Espace entre les images */
+    
+    }
+
+    /* Texte à gauche ou à droite en fonction de isTextOnRight */
+    .text-section-left, .text-section-right {
+      width: 35%;
+    }
+
     
   }
-
-  .text-section-left {
-    padding-left: 150px;
-    padding-right: 0px;
-    padding-top:50px;
-    padding-bottom:50px;
-
   }
-  .text-section-right {
-    padding-left: 0px;
-    padding-right: 150px;
-    padding-top:50px;
-    padding-bottom:50px;
-
-  }
-}
-}
