--- a/anemone_coffee/src/components/Logo.css
+++ b/anemone_coffee/src/components/Logo.css
@@ -6,12 +6,12 @@
     width: 100%;
     height: 100vh;
     background: white;
-    animation: fadeOut 1s 3s forwards; /* Fades out after 3 seconds */
+    animation: fadeOut 1s 3s forwards;
     z-index: 10;
   }
   
   .logo {
-    width: 200px; /* Ajustez la taille selon vos besoins */
+    width: 25%;
     position: absolute;
   }
   
@@ -36,3 +36,8 @@
     }
   }
   
+  @media screen and (max-width: 768px) {
+    .logo-container{
+      width:100%;
+    }
+  }
