--- a/anemone_coffee/src/index.css
+++ b/anemone_coffee/src/index.css
@@ -54,5 +54,23 @@ button:focus-visible {
 
 body, p, h2, h3, h4, h5, h6 {
   font-family: 'PT Sans', sans-serif;
+
+  
 }
 
+
+p {
+  font-size:16px;
+}
+
+h1 {
+  font-size:50px;
+}
+
+h2 {
+  font-size:18px
+}
+
+h3 {
+  font-size:25px
+}
