--- a/anemone_coffee/src/components/PopUpShop.scss
+++ b/anemone_coffee/src/components/PopUpShop.scss
@@ -38,14 +38,17 @@ $close-button-color: #f44336;
   margin: auto;
 }
 
-h2 {
+.title_popshop {
   margin-bottom: 20px;
+  color:rgb(67, 67, 67);
 }
 
-p {
+.text_popshop {
   margin-bottom: 20px;
   font-size: 1.1rem;
   line-height: 1.5;
+  color:black;
+
 }
 
 // Styles pour les boutons
