--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -81,7 +81,8 @@ nav {
           transform: translateX(0); /* Afficher le menu */
           opacity: 1; /* Apparait progressivement */
           transition: transform 0.5s ease, opacity 0.5s ease; /* Transition douce pour ouverture/fermeture */
-
+          padding:0;
+          margin-top:0;
           
             
           .navbar_item {
