--- a/anemone_coffee/src/components/mixins.scss
+++ b/anemone_coffee/src/components/mixins.scss
@@ -4,7 +4,7 @@
     display:flex;
     justify-content:space-around;
     align-items: center;
-    width: 40%; 
+    width: 60px; 
     height: auto;
     margin-right: 0px;
   }
